Support modular tranlations

--- a/src/app/nav/sidenav/sidenav.component.html
+++ b/src/app/nav/sidenav/sidenav.component.html
@@ -2,6 +2,6 @@
   {{ 'SIDENAV' | translate }}
 </h4>
 <nav>
-  <a routerLink="/inner" routerLinkActive="active">Show inner content</a>
-  <a routerLink="/lazy" routerLinkActive="active">Lazy loading content</a>
+  <a routerLink="/inner" routerLinkActive="active">{{'NAV.SIDENAV.SHOW_INNER_CONTENT' | translate}}</a>
+  <a routerLink="/lazy" routerLinkActive="active">{{'NAV.SIDENAV.SHOW_LAZY_LOADED_CONTENT' | translate}}</a>
 </nav>
